[package]
name = "loa"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false # CARGO_PROFILE_RELEASE_DEBUG=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
# anyhow = "1.0.69"
# crossbeam = "0.8.2"
# dotenv = "0.15.0"
# lazy_static = "1.4.0"
# log = "0.4.17"
# pretty_env_logger = "0.4.0"
# rayon = "1.6.1"
# regex = "1.7.1"
# reqwest = "0.11.14"
# serde = { version = "1.0.152", features = ["derive"] }
# serde_json = "1.0.92"
# thiserror = "1.0.38"
# tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
# xshell = "0.2.3"

# [dependencies.api]
# path = "../api"
# [dependencies.parser]
# path = "../parser"
#
# [dev-dependencies]
# # claim = "0.5.0"
# criterion = "0.4.0"
# # fake = "2.5.0"
# quickcheck = "1.0.3"
# # quickcheck_macros = "1.0.0"
# pretty_assertions = "1.3.0"
# rand = "0.8.5"
#
# [[bench]]
# name = "benchmark"
# path = "../dashboard/benches/benchmark.rs"
# harness = false
#
